src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_arith/minus_1_null.deca
// Description :
//    test minus entre un 1 et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) L’opérande gauche est de type 1, L’opérande droite est de type null. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur -
class A{}
{
A a = new A();
int c = 1 - null;
}
